pretty much done with functionality need to fine tune and add logs

--- a/HTML/apartmentcom.html
+++ b/HTML/apartmentcom.html
@@ -41,7 +41,7 @@
     <br><br>
     <div id="photoDiv">
 
-        <img id = "photo" src="https://www.transparentpng.com/thumb/apartment/apartment-simple-19.png" class= "center" alt=>
+        <img id = "photo" src="../imgs/apartment-clipart-big-image-png-2264.png" class= "center" alt=>
 
     </div>
 
