forgot to push the final product

--- a/HTML/apartmentcomManager.html
+++ b/HTML/apartmentcomManager.html
@@ -75,6 +75,13 @@
     <button id="approveButton" class="btn"> Approve/Deny Reimbursement </button>
     <h6 id="approvalText"></h6>
     </div>
+    <div id="newReimbDiv">
+        <h6>Create new reimbursement?</h6>
+        <input id="amount" type="text" placeholder="Enter reimbursement amount" class="col-3"><br>
+        <input type="text" id="description" placeholder="Enter description" class="col-3"><br>
+        <input type="number" id="type" class="col-3" placeholder="1:Lodging, 2:Travel, 3:Food, 4:Other">
+        <button id="createReimb" class="btn btn-dark">Create Reimbursement</button>
+        <h6 id="failed"></h6>
 
     <br><br><br>
     <button id="logout" class="btn btn-dark">Logout</button>
